# agentic-ai-EAG

./: .gitignore  .mcp.json  LICENSE  README.md
Assignment-4 MCP/: .env.example  .gitignore  README.md  mcp_server.py  pyproject.toml
Assignment-4 MCP/prompts/slash/: equinox_v3_1_prompt.md
RAG-Finance/: README-RAG-Finance.md  app.py  index_all.py  index_status.py  memory.py  perception.py  pyproject.toml  requirements-app.txt  run_queries.ps1  scrape_corpus.py  sources.txt
RAG-Finance/state_backup/: index.faiss  index_ids.json
RAG-Finance/state_backup/artifacts/: 58bfdfaf9ca11e44.json  7f4a7908e639bb09.json  e16b86e1ff72bc46.json
RAG-Finance/transcripts/: Class_1_4HAcUG-3Sgg.txt  Class_4_Part_1_QB3HdCwZslM.txt  Updated_V40_UpQAsfecvuI_hi.txt
Session 6/: README.md  SESSION6_ARCHITECTURE.md  SESSION6_REPORT.md  _gateway.py  _smoke_fetch.py  action.py  agent5.py  agent6.py  artifacts.py  assignment.py  decision.py  mcp_server.py  memory.py  memory_store.json  perception.py  pyproject.toml  schemas.py  usage.json
Session 7/: README.md  ReadMe Session 7.txt  download_transcripts.py  gateway.py  mcp_server.py  perception.py  run_queries.ps1
Session 7/llm_gatewayV7/: providers.py
Session 7/transcripts/: Class_2_7v_wwtXkmMQ.txt  Class_3_v4dojhYgDqg.txt  Class_4_Part_2_5lZXK79GoXk.txt  Class_5_Mfi9ZMIesnc.txt  Class_6_ZD3mcMBurWg.txt
Session-5 Planning/: .env.example  README.md  app.py  main.py  pyproject.toml
Session-5 Planning/data/: README.md
Session-5 Planning/llm_gatewayV2/: providers.py
Session-5 Planning/src/: __init__.py  agents.py  gateway_client.py  mcp_client.py  orchestrator.py  prompts.py  schemas.py  scheme_data.py  tools.py
Session-5 Planning/tests/: conftest.py  mock_gateway.py  test_e2e.py  test_units.py
