[project]
name = "research-mcp"
version = "0.2.0"
description = "MCP server for Claude Desktop — web research, arXiv API, filesystem CRUD, and dynamic Prefab dashboards"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "fastmcp>=3.2",
    "prefab-ui==0.19.1",
    "python-dotenv>=1.0",
    "tavily-python>=0.5",
    "arxiv>=2.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
